# Projeto-Vigia

./: README.md  app.py  pyproject.toml  usar_poetry.ps1
src/projeto_vigia/: app.py  config.py  theming.py
src/projeto_vigia/analytics/: aggregations.py  filters.py
src/projeto_vigia/charts/: bar_charts.py  maps.py  time_series.py
src/projeto_vigia/domain/: models.py  preprocessing.py
src/projeto_vigia/services/: data_io.py  drive_fetch.py
src/projeto_vigia/tests/: test_filters.py
src/projeto_vigia/ui/: sections.py  sidebar.py
